<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:weightSum="7"
    android:background="@drawable/g3"
    tools:context=".SignUp_Activity">


    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:text="@string/Name"
            android:textSize="20sp"
            />
        <EditText
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#1A1A1B"
            android:inputType="textPersonName"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:text="@string/email"
            android:textSize="20sp"
            />
        <EditText
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#1A1A1B"
            android:inputType="textEmailAddress"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:text="@string/user_name"
            android:textSize="20sp"
            />
        <EditText
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/user_name_id_for_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#1A1A1B"
            android:inputType="textPersonName"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:text="@string/password"
            android:textSize="20sp"
            />
        <EditText
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/password_id_for_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#1A1A1B"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:text="@string/re_password"
            android:textSize="20sp"
            />
        <EditText
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/re_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#1A1A1B"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <Button
        android:id="@+id/signUp_btn_id_Data_Base"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        style="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:text="@string/sign_up"
        android:drawableLeft="@drawable/security"
        android:background="@drawable/magic"
        />

</LinearLayout>