<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/g1"
    tools:context=".MainActivity">

    <ImageView
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user"
        android:background="@color/colorAccent"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:textStyle="italic|bold"
            android:text="@string/user_name"
            android:textSize="20sp"
            />

        <EditText
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/user_name_id_for_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#1A1A1B"
            android:inputType="textPersonName"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:textStyle="italic|bold"
            android:text="@string/password"
            android:textSize="20sp"
            />

        <EditText
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/password_id_for_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#1A1A1B"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_btn_id"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:textStyle="italic"
            android:textSize="20sp"
            android:drawableLeft="@drawable/login"
            android:textAllCaps="false"
            android:text="@string/login"
            android:layout_marginRight="15dp"
            style="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            android:background="@drawable/magic"
            />

        <Button
            android:id="@+id/signUp_btn_id"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:textStyle="italic"
            android:textSize="20sp"
            android:drawableLeft="@drawable/sign"
            android:textAllCaps="false"
            android:text="@string/sign_up"
            style="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            android:background="@drawable/magic"
            />

    </LinearLayout>


</LinearLayout>